RaylibSharp/Raylib.cs


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern float GetGesturePinchAngle();                       // Get gesture pinch angle

		//------------------------------------------------------------------------------------
		// Camera System Functions (Module: camera)
		//------------------------------------------------------------------------------------

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetCameraMode(Camera3D camera, CameraMode mode);                // Set camera mode (multiple camera modes available)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UpdateCamera(Camera3D* camera);                          // Update camera position for selected mode

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UpdateCamera(ref Camera3D camera);                          // Update camera position for selected mode

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetCameraPanControl(int panKey);                       // Set camera pan key to combine with mouse movement (free camera)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetCameraAltControl(int altKey);                       // Set camera alt key to combine with mouse movement (free camera)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetCameraSmoothZoomControl(int szKey);                 // Set camera smooth zoom key to combine with mouse (free camera)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetCameraMoveControls(int frontKey, int backKey, int rightKey, int leftKey, int upKey, int downKey); // Set camera move controls (1st person and 3rd person cameras)

		//------------------------------------------------------------------------------------
		// Basic Shapes Drawing Functions (Module: shapes)
		//------------------------------------------------------------------------------------

		// Basic shapes drawing functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawPixel(int posX, int posY, Color color);                                                   // Draw a pixel

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawPixelV(Vector2 position, Color color);                                                    // Draw a pixel (Vector version)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, Color color);                // Draw a line

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawLineV(Vector2 startPos, Vector2 endPos, Color color);                                     // Draw a line (Vector version)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawLineEx(Vector2 startPos, Vector2 endPos, float thick, Color color);                       // Draw a line defining thickness

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawLineBezier(Vector2 startPos, Vector2 endPos, float thick, Color color);                   // Draw a line using cubic-bezier curves in-out

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawLineStrip(Vector2* points, int numPoints, Color color);                                   // Draw lines sequence

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCircle(int centerX, int centerY, float radius, Color color);                              // Draw a color-filled circle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCircleSector(Vector2 center, float radius, int startAngle, int endAngle, int segments, Color color);     // Draw a piece of a circle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCircleSectorLines(Vector2 center, float radius, int startAngle, int endAngle, int segments, Color color);    // Draw circle sector outline

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCircleGradient(int centerX, int centerY, float radius, Color color1, Color color2);       // Draw a gradient-filled circle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCircleV(Vector2 center, float radius, Color color);                                       // Draw a color-filled circle (Vector version)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCircleLines(int centerX, int centerY, float radius, Color color);                         // Draw circle outline

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRing(Vector2 center, float innerRadius, float outerRadius, int startAngle, int endAngle, int segments, Color color); // Draw ring

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRingLines(Vector2 center, float innerRadius, float outerRadius, int startAngle, int endAngle, int segments, Color color);    // Draw ring outline

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangle(int posX, int posY, int width, int height, Color color);                        // Draw a color-filled rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleV(Vector2 position, Vector2 size, Color color);                                  // Draw a color-filled rectangle (Vector version)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleRec(Rectangle rec, Color color);                                                 // Draw a color-filled rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectanglePro(Rectangle rec, Vector2 origin, float rotation, Color color);                 // Draw a color-filled rectangle with pro parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleGradientV(int posX, int posY, int width, int height, Color color1, Color color2);// Draw a vertical-gradient-filled rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleGradientH(int posX, int posY, int width, int height, Color color1, Color color2);// Draw a horizontal-gradient-filled rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleGradientEx(Rectangle rec, Color col1, Color col2, Color col3, Color col4);       // Draw a gradient-filled rectangle with custom vertex colors

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleLines(int posX, int posY, int width, int height, Color color);                   // Draw rectangle outline

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleLinesEx(Rectangle rec, int lineThick, Color color);                              // Draw rectangle outline with extended parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleRounded(Rectangle rec, float roundness, int segments, Color color);              // Draw rectangle with rounded edges

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRectangleRoundedLines(Rectangle rec, float roundness, int segments, int lineThick, Color color); // Draw rectangle with rounded edges outline

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTriangle(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                                // Draw a color-filled triangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTriangleLines(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                           // Draw triangle outline

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTriangleFan(Vector2* points, int numPoints, Color color);                                 // Draw a triangle fan defined by points

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTriangleStrip(Vector2* points, int pointsCount, Color color);                             // Draw a triangle strip defined by points

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawPoly(Vector2 center, int sides, float radius, float rotation, Color color);               // Draw a regular polygon (Vector version)


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetShapesTexture(Texture2D texture, Rectangle source);                                        // Define default texture used to draw shapes

		// Basic shapes collision detection functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool CheckCollisionRecs(Rectangle rec1, Rectangle rec2);                                           // Check collision between two rectangles

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool CheckCollisionCircles(Vector2 center1, float radius1, Vector2 center2, float radius2);        // Check collision between two circles

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool CheckCollisionCircleRec(Vector2 center, float radius, Rectangle rec);                         // Check collision between circle and rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Rectangle GetCollisionRec(Rectangle rec1, Rectangle rec2);                                         // Get collision rectangle for two rectangles collision

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool CheckCollisionPointRec(Vector2 point, Rectangle rec);                                         // Check if point is inside rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool CheckCollisionPointCircle(Vector2 point, Vector2 center, float radius);                       // Check if point is inside circle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool CheckCollisionPointTriangle(Vector2 point, Vector2 p1, Vector2 p2, Vector2 p3);               // Check if point is inside a triangle

		//------------------------------------------------------------------------------------
		// Texture Loading and Drawing Functions (Module: textures)
		//------------------------------------------------------------------------------------

		// Image/Texture2D data loading/unloading/saving functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image LoadImage(string fileName);                                                             // Load image from file into CPU memory (RAM)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image LoadImageEx(Color* pixels, int width, int height);                                           // Load image from Color array data (RGBA - 32bit)
